// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`collapsing behaviour when content does not exceed limit renders correctly 1`] = `
<View>
  <View>
    <AnimatedComponent
      scrollEnabled={false}
      style={
        Object {
          "height": 100,
        }
      }
    >
      <View
        onLayout={[Function]}
        testID="children"
      >
        <Text>
          Hello
        </Text>
      </View>
    </AnimatedComponent>
  </View>
</View>
`;

exports[`collapsing behaviour when content exceeds limit renders correctly 1`] = `
<View>
  <View>
    <AnimatedComponent
      scrollEnabled={false}
      style={
        Object {
          "height": 200,
        }
      }
    >
      <View
        onLayout={[Function]}
        testID="children"
      >
        <Text>
          Hello
        </Text>
      </View>
    </AnimatedComponent>
    <AnimatedComponent
      style={
        Array [
          Object {
            "bottom": 0,
            "height": 30,
            "position": "absolute",
            "width": "100%",
          },
          Object {
            "opacity": 1,
          },
        ]
      }
    >
      <LinearGradient
        colors={
          Array [
            "rgba(255, 255, 255, 0)",
            "#ffffff",
          ]
        }
        style={
          Object {
            "bottom": 0,
            "height": 30,
            "position": "absolute",
            "width": "100%",
          }
        }
      />
    </AnimatedComponent>
  </View>
  <Touchable
    accessibilityComponentType="button"
    accessibilityTraits={
      Array [
        "button",
      ]
    }
    delayPressIn={50}
    onPress={[Function]}
    style={
      Object {
        "alignSelf": "flex-end",
      }
    }
  >
    <TextLink
      testID="showmore"
    >
      more
    </TextLink>
  </Touchable>
</View>
`;

exports[`collapsing behaviour when expanded renders correctly 1`] = `
<View>
  <View>
    <AnimatedComponent
      scrollEnabled={false}
      style={
        Object {
          "height": 200,
        }
      }
    >
      <View
        onLayout={[Function]}
        testID="children"
      >
        <Text>
          Hello
        </Text>
      </View>
    </AnimatedComponent>
    <AnimatedComponent
      style={
        Array [
          Object {
            "bottom": 0,
            "height": 30,
            "position": "absolute",
            "width": "100%",
          },
          Object {
            "opacity": 1,
          },
        ]
      }
    >
      <LinearGradient
        colors={
          Array [
            "rgba(255, 255, 255, 0)",
            "#ffffff",
          ]
        }
        style={
          Object {
            "bottom": 0,
            "height": 30,
            "position": "absolute",
            "width": "100%",
          }
        }
      />
    </AnimatedComponent>
  </View>
  <Touchable
    accessibilityComponentType="button"
    accessibilityTraits={
      Array [
        "button",
      ]
    }
    delayPressIn={50}
    onPress={[Function]}
    style={
      Object {
        "alignSelf": "flex-end",
      }
    }
  >
    <TextLink
      testID="showmore"
    >
      less
    </TextLink>
  </Touchable>
</View>
`;

exports[`renders correctly 1`] = `
<View>
  <View>
    <AnimatedComponent
      scrollEnabled={false}
      style={
        Object {
          "height": 0,
        }
      }
    >
      <View
        onLayout={[Function]}
        testID="children"
      >
        <Text>
          Hello
        </Text>
      </View>
    </AnimatedComponent>
  </View>
</View>
`;
